--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="inner_header">
                 <a href="index.html">
                     <div class="logotype">
-                        <h2>JavaScript</h2>
+                        <h2>Blue Lock</h2>
                     </div>
                 </a>
                 <ul class="menu">
@@ -25,7 +25,10 @@
                         <a href="pages/lessons.html">Lessons</a>
                     </li>
                     <li class="menu_link">
-                        <a href="https://t.me/nurdinbuy16" target="_blank">Send message</a>
+                        <a href="pages/card.html">Cards</a>
+                    </li>
+                    <li class="menu_link">
+                        <a href="https://t.me/emir228" target="_blank">My TG</a>
                     </li>
                 </ul>
                 <button class="btn" id="btn-get">Click me!</button>
@@ -36,7 +39,7 @@
     <div class="main_block">
         <div class="container">
             <div class="inner_main">
-                <h1><strong id="js-color">JavaScript</strong> - на самом деле очень легко и просто!</h1>
+                <h1><strong id="js-color">Football жизнь некоторых людей</strong></h1>
                 <div class="colors-buttons">
                     <button class="btn btn-color"></button>
                     <button class="btn btn-color"></button>
@@ -90,11 +93,7 @@
         <div class="container">
             <div class="bottle_inner">
                 <a href="pages/monster.html">
-                    <div class="bowl">
-                        <div class="shadow"></div>
-                        <div class="liquid"></div>
-
-                    </div>
+                    <button>()</button>
                 </a>
             </div>
         </div>
@@ -102,18 +101,24 @@
 
     <div class="block_video">
         <div class="container">
-            <h3>Полезный ролик про Event Loop</h3>
+            <h3>Трейлер про Синюю Тюрьму</h3>
             <div class="inner_block_video">
-                <iframe width="80%" height="450" src="https://www.youtube.com/embed/zDlg64fsQow" title="YouTube video player" frameborder="2" allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="80%" height="450"
+                        src="https://www.youtube.com/embed/hTfnf4y-sgQ"
+                        title="YouTube video player"
+                        frameborder="2"
+                        allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen>
+                </iframe>
             </div>
         </div>
     </div>
 
     <div class="footer">
         <div class="container">
-            <a href="https://www.instagram.com/nurdinbuy/" target="_blank">
+            <a href="https://tiktok.com/@emirkulubekov" target="_blank">
                 <div class="inner_footer">
-                    <h2>Made by NurDinBuy</h2>
+                    <h2>My Tik Tok VPN</h2>
                 </div>
             </a>
         </div>
