--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -15,7 +15,7 @@
             <div class="inner_header">
                 <a href="../index.html">
                     <div class="logotype">
-                        <h2>Java<span>Script</span></h2>
+                        <h2>Blue<span>Lock</span></h2>
                     </div>
                 </a>
                 <ul class="menu">
@@ -26,7 +26,10 @@
                         <a href="../pages/lessons.html">Lessons</a>
                     </li>
                     <li class="menu_link">
-                        <a href="https://t.me/NurDinBuy16" target="_blank">Send message</a>
+                        <a href="../pages/card.html">Cards</a>
+                    </li>
+                    <li class="menu_link">
+                        <a href="https://t.me/emir228" target="_blank">My TG</a>
                     </li>
                 </ul>
                 <button class="btn" id="btn-get">Click me!</button>
@@ -150,9 +153,9 @@
 
     <div class="footer">
         <div class="container">
-            <a href="https://www.instagram.com/nurdinbuy/" target="_blank">
+            <a href="https://tiktok.com/@emirkulubekov" target="_blank">
                 <div class="inner_footer">
-                    <h2>Made by NurDinBuy</h2>
+                    <h2>My Tik Tok VPN</h2>
                 </div>
             </a>
         </div>
