--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     </div>
 
     <div class="main_block">
+        <div class="main_img">
+            <a href="https://cyber.sports.ru/dynamic_images/post/327/746/5/share/22dce9_no_logo_no_text.jpg"></a>
+        </div>
         <div class="container">
             <div class="inner_main">
                 <h1><strong id="js-color">Football жизнь некоторых людей</strong></h1>
@@ -57,30 +60,26 @@
                     <button class="btn-slide" id="prev">&lt;prev</button>
                     <div class="slide active_slide">
                         <div class="slide_card">
-                            <h3>regular expression</h3>
-                            <p>Простыми словами, регулярное выражение - это набор символов, который задает определенные правила для поиска и сопоставления текста. Вы можете использовать регулярные выражения, чтобы найти определенные строки в тексте, заменить части строки на другие значения или извлечь нужную информацию из текста.</p>
-                            <a href="https://developer.mozilla.org/ru/docs/Web/JavaScript/Guide/Regular_expressions" target="_blank">узнать подробнее</a>
+                            <h3>Оффсайд</h3>
+                            <p>Офсайд — запрещенное для футболиста расположение на поле. Базовая интерпретация правила такова: в момент передачи на атакующего игрока, располагающегося на чужой половине поля, между ним и воротами оппонента должны располагаться по крайней мере два соперника, включая вратаря.</p>
                         </div>
                     </div>
                     <div class="slide">
                         <div class="slide_card">
-                            <h3>recursion</h3>
-                            <p>Простыми словами, рекурсия - это, когда функция делает повторяющиеся вызовы самой себя для решения задачи, пока не достигнет определенного условия выхода из рекурсии.</p>
-                            <a href="https://learn.javascript.ru/recursion" target="_blank">узнать подробнее</a>
+                            <h3>Штрафной удар</h3>
+                            <p>Штрафной удар, начиная с шестого набранного нарушения, назначается за шестое набранное нарушение и все последующие такие нарушения, совершенные командой в каждом тайме. Однако, если шестое или последующие набранные нарушения совершаются в штрафной площади нарушившего игрока назначается пенальти.</p>
                         </div>
                     </div>
                     <div class="slide">
                         <div class="slide_card">
-                            <h3>json</h3>
-                            <p>Простыми словами, JSON - это способ представления данных в виде текста, чтобы они могли быть легко поняты и использованы различными программами. Он использует простые правила для описания объектов и массивов, а также для представления простых типов данных, таких как строки, числа, логические значения и т.д.</p>
-                            <a href="https://developer.mozilla.org/ru/docs/Learn/JavaScript/Objects/JSON" target="_blank">узнать подробнее</a>
+                            <h3>VAR</h3>
+                            <p>VAR – это система многоканальной записи, которая помогает судейской бригаде принимать решения при возникновении спорных игровых моментов в футболе.</p>
                         </div>
                     </div>
                     <div class="slide">
                         <div class="slide_card">
-                            <h3>event loop</h3>
-                            <p>Простыми словами, event loop похож на дежурного, который непрерывно проверяет, произошло ли какое-либо событие, и реагирует на него, когда оно происходит. Он имеет список задач, которые нужно выполнить, и он перебирает этот список событий одно за другим, обрабатывая каждое событие, когда оно наступает.</p>
-                            <a href="https://highload.today/kak-ustroen-event-loop-v-javascript-parallelnaya-model-i-tsikl-sobytij/" target="_blank">узнать подробнее</a>
+                            <h3>Автогол</h3>
+                            <p>Автогол - это момент в футболе, когда мяч пересекает линию ворот после существенного касания игрока защищающейся команды. Важно отметить, что не каждое касание защитника, приведшее к голу, считается автоголом.</p>
                         </div>
                     </div>
                     <button class="btn-slide" id="next">next&gt;</button>
@@ -89,15 +88,6 @@
         </div>
     </div>
 
-    <div class="botlle">
-        <div class="container">
-            <div class="bottle_inner">
-                <a href="pages/monster.html">
-                    <button>()</button>
-                </a>
-            </div>
-        </div>
-    </div>
 
     <div class="block_video">
         <div class="container">
