--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -53,49 +53,53 @@
 
     <div class="tab_slider">
         <div class="container">
-            <h3>tab slider</h3>
+            <h3>Топы сильных в  Блю локе</h3>
             <div class="inner_tab_slider">
                 <div class="tab_contents_block">
 
                     <div class="tab_content_block">
-                        <h4>Делегирование событий</h4>
-                        <p>В JavaScript делегирование событий - это когда мы используем один обработчик событий для
-                            группы элементов, вместо того чтобы назначать отдельный обработчик каждому элементу. Когда
-                            происходит событие на одном из элементов, оно перехватывается общим обработчиком, который
-                            определяет, какой элемент вызвал событие, и выполняет соответствующие действия.</p>
+                        <img src="https://pikuco.ru/upload/test_stable/d5f/d5fc58f74e86f89f8926592d82d8124e.webp" alt="Исаги Ёичи" class="tab_image">
+                        <div>
+                            <h4>Исаги Ёичи</h4>
+                            <p>Молодой нападающий, который учится на втором курсе и ранее играл в качестве нападающего футбольной команды старшей школы Ичинань. Его главная цель – стать лучшим нападающим мира.</p>
+                        </div>
+                    </div>
+
+                    <div class="tab_content_block">
+                        <img src="https://pikuco.ru/upload/test_stable/0a0/0a037b655237acc91582afd1753c615c.webp" alt="Bachira" class="tab_image">
+                        <div>
+                        <h4>Мэгуру Бачира</h4>
+                        <p>Причудливый нападающий, который играет по своим инстинктам.Его главная цель состояла в том, чтобы найти футбольных соперников,внутри которых тоже есть «монстр», с которыми можно было бы играть. </p>
+                    </div>
                     </div>
                     <div class="tab_content_block">
-                        <h4>classList</h4>
-                        <p>classList в JavaScript - это свойство, которое позволяет нам работать с классами элемента
-                            HTML. С помощью classList мы можем добавлять, удалять или проверять наличие классов у
-                            элемента. Допустим, у нас есть элемент на веб-странице, и мы хотим изменить его классы с
-                            помощью JavaScript. Вместо того, чтобы обращаться напрямую к атрибуту class, мы можем
-                            использовать свойство classList этого элемента. </p>
+                        <img src="https://pikuco.ru/upload/test_stable/d1d/d1ddc77acd2d1a3768b9f41886e78925.webp" alt="Наги" class="tab_image">
+                        <div>
+                            <h4>Сейсиро Наги</h4>
+                            <p>Когда он впервые прибыл в Блю Лок, он был членом Команды V и её лучшим игроком.Его главная цель — играть в футбол и находить сильных противников, с которыми можно соперничать и проверять свои навыки. </p>
+                        </div>
                     </div>
                     <div class="tab_content_block">
-                        <h4>add()</h4>
-                        <p>Метод add позволяет добавить новый класс к списку классов элемента. Например,
-                            element.classList.add('new-class') добавит класс с именем "new-class" к элементу.</p>
+                        <img src="https://pikuco.ru/upload/test_stable/4f5/4f541679d43d6d31c395708c206b87c2.webp" alt="Саэ" class="tab_image">
+                        <div>
+                            <h4>Итоши Саэ</h4>
+                            <p>Талантливый футболист, которого считают лучшим игроком Японии. Его главной целью было стать лучшим нападающим в мире, но после отъезда из Японии он изменил свою мечту: стать лучшим полузащитником мира </p>
+                        </div>
                     </div>
                     <div class="tab_content_block">
-                        <h4>remove()</h4>
-                        <p>Метод remove позволяет удалить класс из списка классов элемента. Например,
-                            element.classList.remove('old-class') удалит класс с именем "old-class" из элемента.</p>
-                    </div>
-                    <div class="tab_content_block">
-                        <h4>contains()</h4>
-                        <p>Метод contains позволяет проверить, содержит ли элемент определенный класс. Он возвращает
-                            true, если класс присутствует, и false, если его нет. Например,
-                            element.classList.contains('highlight') вернет true, если у элемента есть класс
-                            "highlight".</p>
+                        <img src="https://pikuco.ru/upload/test_stable/eea/eea1049e9e8ba9b7e959dd0e11de05fa.webp" alt="Рин" class="tab_image">
+                        <div>
+                            <h4>Итоши Рин</h4>
+                            <p>Рин является младшим братом Саэ Итоши и начал играть с ним в футбол в юном возрасте. Зациклен на том, чтобы победить своего брата в футболе и, в свою очередь, отомстить ему за отказ от их общей мечты.</p>
+                        </div>
                     </div>
 
                     <div class="tab_content_items">
-                        <div class="tab_content_item tab_content_item_active">Делегирование событий</div>
-                        <div class="tab_content_item">Class List</div>
-                        <div class="tab_content_item">add()</div>
-                        <div class="tab_content_item">remove()</div>
-                        <div class="tab_content_item">contains()</div>
+                        <div class="tab_content_item tab_content_item_active">Топ 1</div>
+                        <div class="tab_content_item">Топ 2</div>
+                        <div class="tab_content_item">Топ 3</div>
+                        <div class="tab_content_item">Топ 4</div>
+                        <div class="tab_content_item">Топ 5</div>
                     </div>
 
                 </div>
